# scripture-links

./: .clippy.toml  .gitignore  .rusty-hook.toml  1sed  CHANGELOG.md  Cargo.toml  README.md  deny.toml  deny.toml.backup  generate_rust_data.py  package-lock.json  package.json  release-plz.toml
.changeset/: config.json  lucky-buses-wonder.md  purple-planets-try.md  study-helps-support.md  version-support-and-test-improvements.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml  release-binaries.yml  release-plz.yml  release.yml  security.yml
benches/: parsing_benchmarks.rs
proptest-regressions/: main.txt
scripts/: sync-cargo-version.js
src/: abbreviations.rs  cli.rs  integration_tests.rs  json_output.rs  lib.rs  main.rs  parser.rs  scripture_data.rs  text_processor.rs  types.rs  url_generator.rs  wasm.rs
tests/: cli_integration.rs  package.json  wasm_integration.js  web_import_test.js
web/: app.js  index.html  styles.css
