[package]
name = "scripture-links"
version = "0.1.0"
edition = "2024"

[lib]
name = "scripture_links"
path = "src/lib.rs"

[[bin]]
name = "scripture-links"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
once_cell = "1.19"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[[bench]]
name = "parsing_benchmarks"
harness = false
