[package]
name = "scripture-links"
version = "1.0.0"
edition = "2024"

[lib]
name = "scripture_links"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "scripture-links"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
once_cell = "1.19"
urlencoding = "2.1"

# WASM dependencies
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[[bench]]
name = "parsing_benchmarks"
harness = false
