[package]
name = "scripture-links"
version = "1.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "scripture_links_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "scripture-links"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
once_cell = "1.19"
serde_json = "1.0"

# WASM dependencies
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
criterion = "0.7"
proptest = "1.0"
rusty-hook = "0.11"

[[bench]]
name = "parsing_benchmarks"
harness = false
